# libvpx

./: .clang-format  .directory  .gitignore  .mailmap  2015_02_26_1221_jimbankoski_rtdnewbase_build.html  :w  AUTHORS  BUILD_INSTR.txt  CHANGELOG  README  README_RS  aomdec.c  aomenc.c  args.c  args.h  configure  configure.txt  docs.mk  example_xma.c  examples.mk  groups  hooks  iosbuild.sh  ivfdec.c  ivfdec.h  ivfenc.c  ivfenc.h  libs.mk  libs.mk.orig  mainpage.dox  md5_utils.h  project.config  rate_hist.c  rate_hist.h  resize_util.c  solution.mk  solution.mk.orig  stdhd.xml  tags  tools.mk  (+36 more)
aom/: aom_encoder.h  aom_frame_buffer.h  aomcx.h  aomdx.h  vp8dx.h
aom_dsp/: aom_dsp.mk  aom_dsp_rtcd_defs.pl  bitreader.h  bitwriter.h  deblock.c  dkboolreader.c  dkboolreader.h  fwd_txfm.c  fwd_txfm.h  intrapred.c  inv_txfm.h  psnr.c  psnr.h  quantize.h  variance.h
aom_mem/: aom_mem.c
aom_scale/: yv12config.h
aom_util/: debug_util.h
av1/: av1_common.mk  av1_cx.mk  av1_cx_iface.c  av1_dx_iface.c  av1_iface_common.h  av1cx.mk  av1dx.mk
compare_two_pass_to_box/: a.out  convolve.c  main.c  make.sh  temporal_filter.c  vpx_timer.h
cuda/: init_cuda.cu  init_cuda.h  me_cuda.cu  me_cuda.h  me_cuda2.cu  me_cuda3.cu  typedef_cuda.h
examples/: .set_maps.c.swp  api_simple_decoder.c  api_simple_encoder.c  decode_to_md5.c  decode_to_md5.txt  decode_with_drops.c  decoder_tmpl.c  (+32 more)
tools/syn_mv/: CMakeLists.txt  README.md
tools/syn_mv/include/: RenderWindow.h  util.h
tools/syn_mv/shader/: fragmentShader.glsl  vertexShader.glsl
tools/syn_mv/src/: RenderWindow.cpp  util.c  util.cpp
(+2500 files in other folders)
